--- a/guestbook.html
+++ b/guestbook.html
@@ -3,10 +3,14 @@
 
     <style>
 
- @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+.post {
+  border:1px solid black;
+  margin:6px;
+  padding:6px;
+}
         body {
             
-            font-family: Inter;
+            font-family: Verdana;
             
         }
     </style>
