--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@ font-size:19.2px;
     <link href="cover.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
-    
+    <div class="container d-flex mx-auto flex-column">
+
+	  <div class="alert alert-light" role="alert">
+		  This website is currently a <strong>work in progress</strong>. It will likely be done in early 2022.
+</div>
+	  </div>
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+	
+	
   <header class="mb-auto">
 
   </header>
