--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html class="h-100" lang="en"><head>
+<html class="h-100" lang="en">
+	<head>
+		<title>James Underwood</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
