--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
     font-family: 'Inter', sans-serif;
             
           background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-        padding-left:30px;
-        padding-right:30px;
+        padding-left:10%;
+        padding-right:10%;
         }
 
     
