--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,6 @@
           
            $.get("https://docs.google.com/spreadsheets/d/14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g/export?format=csv&id=14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g", function(data, status) {
    var arraylet = data.split(/\r?\n/);
-console.log(data);
                arraylet.forEach(function(val) {
 
   $('<div class="blogitem" />').text(val).appendTo('body');
@@ -93,7 +92,7 @@ console.log(data);
    });
 
    arraylet.forEach(function(val, i) {
-console.log(i);
+console.log(arraylet[i]);
    });
 
 
