--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
    var arraylet = data.split(/\r?\n/);
                arraylet.forEach(function(val) {
 
-  $('<div class="blogitem" />').text(val).appendTo('body');
+  $('<div class="blogitem" />').text("<h1>"val).appendTo('body');
 
    });
 
