--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
                arraylet.forEach(function(val) {
 
   $('<div class="blogitem" />').text("").appendTo('body');
-$("body").last().text(val);
+$(".blogitem").last().text(val);
                       });
 
    arraylet.forEach(function(val, i) {
