--- a/blog.html
+++ b/blog.html
@@ -86,9 +86,11 @@
            $.get("https://docs.google.com/spreadsheets/d/14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g/export?format=tsv&id=1sKIOtLnwtzp49gyhMLV-AJ7jZsNtmq9RAHiP0WsmA4E", function(data, status) {
    var arraylet = data.split(/\r?\n/);
                arraylet.forEach(function(val) {
-
+let valSplit = val.split(/\r?\t/);
+let hed = valSplit[2];
+let copy = valSplit[1];
   $('<div class="blogitem" />').text("").appendTo('body');
-$(".blogitem").last().text(val);
+$(".blogitem").last().text(hed + copy);
                       });
 
    arraylet.forEach(function(val, i) {
