--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ guestbook
 
  <details>
   <summary>leave a message</summary>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:560px;" marginheight="0" marginwidth="0">Loading…</iframe>
 </details> 
 <div id="container">
 
