--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ guestbook
 	      <script src="jquery-3.6.0.min.js"></script>
 	<script>
 		
-		$.get("https://docs.google.com/spreadsheets/d/14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g/export?format=csv&id=14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g", function(data, status) {
+setInterval(function(){
+
+$.get("https://docs.google.com/spreadsheets/d/14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g/export?format=csv&id=14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g", function(data, status) {
   var arraylet = data.split(/\r?\n/);
   arraylet = arraylet.splice(1, arraylet.length);
 
@@ -125,6 +127,7 @@ var arraylet2 = arraylet.filter(function(value, index, arr){
 
 });
 
+},10000);
 	</script>
 	
 </body>
