--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 	<style>
 		body {
-			background:yellow;
+			background:tan;
   padding: 0;
     font-family: 'Helvetica', 'Arial', sans-serif;
     }
