--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div id="subheader">
   <p style="margin:0;">
   
-  <a>old website</a> | <a>campaign website #1</a> | <a href="https://realjunderwood.github.io/old/campaign2/">campaign website #2</a> | <a>resume</a> | <a href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a href="https://github.com/junderw00d">github &lt;old&gt;</p>
+  <a>old website</a> | <a>campaign website #1</a> | <a href="https://realjunderwood.github.io/old/campaign2/">campaign website #2</a> | <a>resume</a> | <a href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a href="https://github.com/junderw00d">github &lt;old&gt;</a></p>
 </div>
 
 <div id="feed">
