Update and rename old/campaign1.html to old/campaign1/index.html

--- a/old/campaign1/index.html
+++ b/old/campaign1/index.html
@@ -10,7 +10,7 @@ file_put_contents("/live/campaigntraffic.txt", "**visit from " . $_SERVER['REMOT
                 <meta name="keywords" content="James Underwood, James, Underwood, James Underwood President, President, UAHS, Upper Arlington, Upper Arlington High School, 2023, Golden Bears, Class of 2023, HMS, Hastings, Hastings Middle School, 8th grade, class, class president, president, presidency, office of the president, candidate, instagram">
                 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="The official website of Underwood for UAHS">
-               <link rel="stylesheet" href="/css/style.css">
+               <link rel="stylesheet" href="style.css">
                 <link rel="shortcut icon" href="/favicon.ico?">
 
 <style>
