--- a/old/campaign1/index.html
+++ b/old/campaign1/index.html
@@ -33,7 +33,7 @@ white,
 			<h1 style="line-height:1em;font-family:arial;">James Underwood for 8th Grade Class President</h1>
 			<small><i>Hastings Middle School</i></small>
 		</div>
-		<img src="/images/flag.gif" width="50px" style="">
+		<img src="flag.gif" width="50px" style="">
 		<div class="container">
 			<h1>Statement on the Election</h1>
 			<b>October 9th, 2018</b>
