--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 		
 	</style>
 	</head>
-<div id="header">
-  <h1 style="font-size:42px;font-weight:900;margin:0;">James Underwood<span style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
+<div id="header" style="height:60px;">
+  <h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">James Underwood<span style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
 </div>
 
 <div id="subheader">
@@ -125,8 +125,126 @@ var arraylet2 = arraylet.filter(function(value, index, arr){
 
 });
 
-		
-		
+		var fonts = ['Arial',
+'Arial Black',
+'Bahnschrift',
+'Calibri',
+'Cambria',
+'Cambria Math',
+'Candara',
+'Comic Sans MS',
+'Consolas',
+'Constantia',
+'Corbel',
+'Courier New',
+'Ebrima',
+'Franklin Gothic Medium',
+'Gabriola',
+'Gadugi',
+'Georgia',
+'HoloLens MDL2 Assets',
+'Impact',
+'Ink Free',
+'Javanese Text',
+'Leelawadee UI',
+'Lucida Console',
+'Lucida Sans Unicode',
+'Malgun Gothic',
+'Marlett',
+'Microsoft Himalaya',
+'Microsoft JhengHei',
+'Microsoft New Tai Lue',
+'Microsoft PhagsPa',
+'Microsoft Sans Serif',
+'Microsoft Tai Le',
+'Microsoft YaHei',
+'Microsoft Yi Baiti',
+'MingLiU-ExtB',
+'Mongolian Baiti',
+'MS Gothic',
+'MV Boli',
+'Myanmar Text',
+'Nirmala UI',
+'Palatino Linotype',
+'Segoe MDL2 Assets',
+'Segoe Print',
+'Segoe Script',
+'Segoe UI',
+'Segoe UI Historic',
+'Segoe UI Emoji',
+'Segoe UI Symbol',
+'SimSun',
+'Sitka',
+'Sylfaen',
+'Symbol',
+'Tahoma',
+'Times New Roman',
+'Trebuchet MS',
+'Verdana',
+'Webdings',
+'Wingdings',
+'Yu Gothic','American Typewriter',
+'Andale Mono',
+'Arial',
+'Arial Black',
+'Arial Narrow',
+'Arial Rounded MT Bold',
+'Arial Unicode MS',
+'Avenir',
+'Avenir Next',
+'Avenir Next Condensed',
+'Baskerville',
+'Big Caslon',
+'Bodoni 72',
+'Bodoni 72 Oldstyle',
+'Bodoni 72 Smallcaps',
+'Bradley Hand',
+'Brush Script MT',
+'Chalkboard',
+'Chalkboard SE',
+'Chalkduster',
+'Charter',
+'Cochin',
+'Comic Sans MS',
+'Copperplate',
+'Courier',
+'Courier New',
+'Didot',
+'DIN Alternate',
+'DIN Condensed',
+'Futura',
+'Geneva',
+'Georgia',
+'Gill Sans',
+'Helvetica',
+'Helvetica Neue',
+'Herculanum',
+'Hoefler Text',
+'Impact',
+'Lucida Grande',
+'Luminari',
+'Marker Felt',
+'Menlo',
+'Microsoft Sans Serif',
+'Monaco',
+'Noteworthy',
+'Optima',
+'Palatino',
+'Papyrus',
+'Phosphate',
+'Rockwell',
+'Savoye LET',
+'SignPainter',
+'Skia',
+'Snell Roundhand',
+'Tahoma',
+'Times',
+'Times New Roman',
+'Trattatello',
+'Trebuchet MS',
+'Verdana',
+'Zapfino'];
+		setInterval(function(){document.getElementById("nameplate").style.fontFamily = fonts[Math.floor(Math.random()*fonts.length)];},100);
 		
 	</script>
 	
