--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	</style>
 	</head>
 <div id="header" style="height:60px;">
-  <h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">James Underwood<span style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
+  <h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">James Underwood<span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
 </div>
 
 <div id="subheader">
@@ -244,7 +244,7 @@ var arraylet2 = arraylet.filter(function(value, index, arr){
 'Trebuchet MS',
 'Verdana',
 'Zapfino'];
-		setInterval(function(){document.getElementById("nameplate").style.fontFamily = fonts[Math.floor(Math.random()*fonts.length)];},1000);
+		setInterval(function(){document.getElementById("dotNet").style.fontFamily = fonts[Math.floor(Math.random()*fonts.length)];},100);
 		
 	</script>
 	
