--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@ guestbook
 
 
 </div>
+	
+	
+	<div>
+		
+		<ul>
+			
+			<a href="cgol">Conway's Game of Life</a>
+		</ul>
+	</div>
+	
 	      <script src="jquery-3.6.0.min.js"></script>
 	<script>
 $("#container").html("");
