--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ guestbook
 		
 		<ul>
 			
-			<a href="cgol">Conway's Game of Life</a>
+			<li><a href="cgol">Conway's Game of Life</a></li>
 		</ul>
 	</div>
 	
