--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ guestbook
 			
 			<li><a href="cgol">Conway's Game of Life</a></li>
 		</ul>
+		<img src="construction.gif"></img>
 	</div>
 	
 	      <script src="jquery-3.6.0.min.js"></script>
