--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 <div id="feed">
   <h5>
-    "feed"
-  </h5>
+latest
+	</h5>
   <ul>
     <li>
       <span class="latestTag">Blog</span> <a href="yost.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a> <span class="smoldate">3/13/22</span>
