--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div id="subheader">
   <p style="margin:0;">
   
-  <a>old website</a> | <a href="/old/campaign1">campaign website #1</a> | <a href="/old/campaign2/">campaign website #2</a> | <a href="JamesUnderwoodResume-R.pdf">resume</a> | <a href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a href="https://github.com/junderw00d">github &lt;old&gt;</a></p>
+  <a>old website</a> | <a href="/old/campaign1">campaign website #1</a> | <a href="/old/campaign2/">campaign website #2</a> | <a href="JamesUnderwoodResume-R.pdf">resume</a> | <a href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a href="https://github.com/junderw00d">github &lt;old&gt;</a> | <a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></p>
 </div>
 
 <div id="feed">
@@ -73,10 +73,14 @@ latest
 	</h5>
   <ul>
     <li>
-      <span class="latestTag">Blog</span> <a href="yost.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a> <span class="smoldate">3/13/22</span>
+      <span class="latestTag">Blog</span> <a href="yost.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a> <span class="smoldate">3/13/22</span>
     </li>
-   
-   
+       <li>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25401" target="_BLANK">Beyond the Classics</a> <span class="smoldate">2/17/22</span>
+    </li>
+       <li>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25422" target="_BLANK">Marching for Masks</a> <span class="smoldate">2/17/22</span>
+    </li>
    
   </ul>
 </div>
