--- a/index.html
+++ b/index.html
@@ -104,10 +104,16 @@ guestbook
 	<div>
 		
 		<ul>
-			
+			<div style="background:yellow">
 			<li><a href="cgol">Conway's Game of Life</a></li>
+			</div>
 		</ul>
 		<img src="construction.gif"></img>
+			<img src="construction.gif"></img>
+		<img src="construction.gif"></img>
+		<img src="construction.gif"></img>
+		<img src="construction.gif"></img>
+
 	</div>
 	
 	      <script src="jquery-3.6.0.min.js"></script>
