--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@ guestbook
 	
 	<div>
 		
-		<ul>
+		
 			<div style="background:yellow">
-			<li><a href="cgol">Conway's Game of Life</a></li>
+		<ul>
+				<li><a href="cgol">Conway's Game of Life (2018)</a></li>
+			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amatuer radio logging software (2018)</a></li>
 			</div>
 		</ul>
 		<img src="construction.gif"></img>
