--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ guestbook
 			<div style="background:yellow;width:50%;">
 		<ul>
 				<li><a href="cgol">Conway's Game of Life (2018)</a></li>
-			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amatuer radio logging software (2018)</a></li>
+			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a></li>
 			</div>
 		</ul>
 		<img src="construction.gif"></img>
