--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div id="subheader">
   <p style="margin:0;">
   
-  <a>old website</a> | <a target="_BLANK" href="/old/campaign1">campaign website #1</a> | <a target="_BLANK" href="/old/campaign2/">campaign website #2</a> | <a disabled target="_BLANK" href="JamesUnderwoodResume-R.pdf">resume</a> | <a target="_BLANK" href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a target="_BLANK" href="https://github.com/junderw00d">github &lt;old&gt;</a> | <a target="_BLANK" href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></p>
+  <a>old website</a> | <a target="_BLANK" href="/old/campaign1">campaign website #1</a> | <a target="_BLANK" href="/old/campaign2/">campaign website #2</a> | <a target="_BLANK" href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a target="_BLANK" href="https://github.com/junderw00d">github &lt;old&gt;</a> | <a target="_BLANK" href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></p>
 </div>
 
 <div id="feed">
