--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ guestbook
 		<ul>
 				<li><a href="cgol">Conway's Game of Life (2018)</a></li>
 			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a></li>
+			<li><small>"further affiant sayeth naught"</small></li>
 			</div>
 		</ul>
 		<img src="construction.gif"></img>
