--- a/index.html
+++ b/index.html
@@ -116,18 +116,23 @@ guestbook
 			<div style="background:yellow;width:50%;">
 		<ul>
 				<li><a href="cgol">Conway's Game of Life (2018)</a></li>
-			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a></li>
-			<li><small>"further affiant sayeth naught"</small></li>
-			</div>
+						<li><small>"further affiant sayeth naught"</small></li>
+
+			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a>
+			<ul>
+				<li><a href="https://wireless2.fcc.gov/UlsApp/UlsSearch/license.jsp?licKey=888429">KE8HJU</a></li>
+				</ul>
+			</li>
 		</ul>
-		<img src="construction.gif"></img>
+			</div>
+
+				<img src="construction.gif"></img>
 			<img src="construction.gif"></img>
 		<img src="construction.gif"></img>
 		<img src="construction.gif"></img>
 		<img src="construction.gif"></img>
 
-	</div>
-	
+</div>	
 	      <script src="jquery-3.6.0.min.js"></script>
 	<script>
 $("#container").html("");
