--- a/index.html
+++ b/index.html
@@ -62,7 +62,27 @@
 	</style>
 	</head>
 <div id="header" style="height:60px;">
-  <h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">james underwood<span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
+<pre style="font-size:5px;">
+  
+       gg                                                        ,ggg,         gg                                                                                                      
+    dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
+   dP Yb                                                      Yb, `88        88                        8I                                                                         8I 
+  ,8  `8,                                                      `"  88        88                        8I                                                                         8I 
+  I8   Yb                                                          88        88                        8I                                                                         8I 
+  `8b, `8,     ,gggg,gg   ,ggg,,ggg,,ggg,    ,ggg,     ,g,         88        88   ,ggg,,ggg,     ,gggg,8I   ,ggg,    ,gggggg,  gg    gg    gg     ,ggggg,      ,ggggg,      ,gggg,8I 
+   `"Y88888   dP"  "Y8I  ,8" "8P" "8P" "8,  i8" "8i   ,8'8,        88        88  ,8" "8P" "8,   dP"  "Y8I  i8" "8i   dP""""8I  I8    I8    88bg  dP"  "Y8ggg  dP"  "Y8ggg  dP"  "Y8I 
+       "Y8   i8'    ,8I  I8   8I   8I   8I  I8, ,8I  ,8'  Yb       88        88  I8   8I   8I  i8'    ,8I  I8, ,8I  ,8'    8I  I8    I8    8I   i8'    ,8I   i8'    ,8I   i8'    ,8I 
+        ,88,,d8,   ,d8b,,dP   8I   8I   Yb, `YbadP' ,8'_   8)      Y8b,____,d88,,dP   8I   Yb,,d8,   ,d8b, `YbadP' ,dP     Y8,,d8,  ,d8,  ,8I  ,d8,   ,d8'  ,d8,   ,d8'  ,d8,   ,d8b,
+    ,ad88888P"Y8888P"`Y88P'   8I   8I   `Y8888P"Y888P' "YY8P8P      "Y888888P"Y88P'   8I   `Y8P"Y8888P"`Y8888P"Y8888P      `Y8P""Y88P""Y88P"   P"Y8888P"    P"Y8888P"    P"Y8888P"`Y8
+  ,dP"'   Yb                                                                                                                                                                         
+ ,8'      I8                                                                                                                                                                         
+,8'       I8                                                                                                                                                                         
+I8,      ,8'                                                                                                                                                                         
+`Y8,___,d8'                                                                                                                                                                          
+  "Y888P"                                                                                                                                                                            
+
+</pre>
+	<h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">james underwood<span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
 </div>
 
 <div id="subheader">
