--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I8,      ,8'
   "Y888P"                                                                                                                                                                            
 
 </pre>
-	<h1 id="nameplate" style="font-size:42px;font-weight:900;margin:0;">james underwood<span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span></h1>
+<span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 </div>
 
 <div id="subheader">
