--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</style>
 	</head>
 <div id="header" style="height:60px;">
-<pre style="font-size:5px;">
+<pre style="font-size:5px;display:inline">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
