--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</style>
 	</head>
 <div id="header" style="height:60px;">
-<pre style="font-size:5px;display:inline">
+<div id="precontainer" style="display:inline-block;width:50%"><pre style="font-size:5px;display:inline">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
@@ -81,8 +81,9 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre>
+</pre></div> <div id="dotNetCont" style="width:40%;display:inline-block;">
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
+	</div>
 </div>
 
 <div id="subheader">
