--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 	</style>
 	</head>
 <div id="header" style="height:60px;">
-<div id="precontainer" style="display:inline-block;width:50%"><pre style="font-size:5px;display:inline">
+
+	<table>
+		<tr>
+			<td>
+	<pre style="font-size:5px;display:inline">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
@@ -81,9 +85,9 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre></div> <div id="dotNetCont" style="width:40%;display:inline-block;">
+</pre><td><td id="dotNetCont" style="width:40%;display:inline-block;">
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
-	</div>
+			</td></tr>
 </div>
 
 <div id="subheader">
