--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre><td><td id="dotNetCont" style="width:40%;display:inline-block;">
+</pre><td>
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td></tr>
 </div>
