--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		body {
 			background:tan;
   padding: 0;
-    /* font-family: 'Helvetica', 'Arial', sans-serif; */
+    font-family: 'Helvetica', 'Arial', sans-serif;
     }
 #header {
   background: #2b2b2b;
@@ -85,7 +85,9 @@ I8,      ,8'
 `Y8,___,d8'                                                                                                                                                                          
   "Y888P"                                                                                                                                                                            
 
-</pre><td>
+</pre></td>
+			
+			<td>
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td></tr>
 </div>
