--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I8,      ,8'
 			
 			<td>
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
-			</td></tr>
+			</td></tr></table>
 </div>
 
 <div id="subheader">
