--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		body {
 			background:tan;
   padding: 0;
-    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
     }
 #header {
   background: #2b2b2b;
