--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<table>
 		<tr>
 			<td>
-	<pre style="font-size:5px;display:inline">
+	<pre style="font-size:5px;display:inline;color:white;">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
