--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@ I8,      ,8'
 			
 			<td>
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
-			</td></tr></table>
+			</td>
+		<td>
+							<img src="construction.gif" style="width:60px"></img>
+
+			</td>
+		
+		</tr></table>
 </div>
 
 <div id="subheader">
