--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ I8,      ,8'
 
 </pre></td>
 			
-			<td>
+			<td style="width:160px">
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td>
 		<td>
-							<img src="construction.gif" style="width:60px"></img>
+							<img src="construction.gif" style="width:200px"></img>
 
 			</td>
 		
