--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 #subheader {
   padding:4px;
-  background:#803630;
-  color:white;
+  background:silver;
+  color:black;
   height:40px;
 }
 		
@@ -92,6 +92,11 @@ I8,      ,8'
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td>
 		<td>
+							<img src="construction.gif" style="width:180px"></img>
+
+			</td>
+	
+	<td>
 							<img src="construction.gif" style="width:180px"></img>
 
 			</td>
