--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 }
 		
 #feed {
-  background:silver;
+  background:tan;
   padding:10px;
   display:inline-block;
   line-height:1.5em;
@@ -44,9 +44,7 @@
   height:40px;
 }
 		
-		#subheader a {
-			color:white !important;
-		}
+	
 
 .smoldate {
   font-size:11px;
