--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ guestbook
 			<div style="background:yellow;width:50%;">
 		<ul>
 				<li><a href="cgol">Conway's Game of Life (2018)</a></li>
-						<li><small><a href="https://fcdcfcjs.co.franklin.oh.us/CaseInformationOnline/caseSearch?iQWo7CMzTpSrdCTGt4lT">BRANDON LYNAUGH ET AL -VS- FRANK LAROSE ET AL</a></small></li>
+						<li><small>"further affiant sayeth naught" (22 CV 002851)</small></li>
 
 			<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a>
 			<ul>
