--- a/index.html
+++ b/index.html
@@ -116,8 +116,16 @@ latest
 	</h5>
   <ul>
 	  
+	    <li>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25740" target="_BLANK">To Test or to Rest</a> <span class="smoldate">4/19/22</span>
+    </li>
+	    <li>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25683" target="_BLANK">Golden Apples</a> <span class="smoldate">4/19/22</span>
+    </li>
+	  
+	  
 	   <li>
-      <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">james underwood for communications chair</a> <span class="smoldate">5/5/22</span>
+      <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">communications chair speech</a> <span class="smoldate">5/5/22</span>
     </li>
 	  
     <li>
