--- a/index.html
+++ b/index.html
@@ -116,18 +116,22 @@ latest
 	</h5>
   <ul>
 	  
+	  <li>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25685" target="_BLANK">Misquoted</a> <span class="smoldate">5/31/2022</span>
+    </li>
+	  
 	    <li>
-      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25740" target="_BLANK">To Test or to Rest</a> <span class="smoldate">4/19/22</span>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25740" target="_BLANK">To Test or to Rest</a> <span class="smoldate">5/10/22</span>
     </li>
 	    <li>
-      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25683" target="_BLANK">Golden Apples</a> <span class="smoldate">4/19/22</span>
+      <span class="latestTag">Arlingtonian</span> <a href="https://www.arlingtonian.com/archives/25683" target="_BLANK">Golden Apples</a> <span class="smoldate">5/10/22</span>
     </li>
 	  
 	  
 	   <li>
       <a href="https://www.youtube.com/watch?v=XpaBC9w2CeU" target="_BLANK">communications chair speech</a> <span class="smoldate">5/5/22</span>
     </li>
-	  
+
     <li>
       <span class="latestTag">Blog</span> <a href="yost.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a> <span class="smoldate">3/13/22</span>
     </li> 
