--- a/index.html
+++ b/index.html
@@ -177,9 +177,18 @@ guestbook
 		</ul>
 			</div>
 
+		
+		
 			
 
 </div>	
+
+<div style="background:white;width:30%;">
+		<ul>
+			<li><a href="http://www.trystancraft.com/martha/notes/teen.html">gothic martha stewart for teens</a></li>
+		</ul>
+			</div>
+
 	      <script src="jquery-3.6.0.min.js"></script>
 	<script>
 $("#container").html("");
