--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ I8,      ,8'
 			</td>
 	
 	<td>
-							<img src="construction.gif" style="width:180px"></img>
+							<img src="flag1.gif" style="width:60px"></img>
+								<img src="flag2.gif" style="width:60px"></img>
+
+							<img src="flag3.gif" style="width:60px"></img>
+
 
 			</td>
 		
