--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@ I8,      ,8'
 			</td>
 	
 	<td>
+		<div style="background:white">
 							<img src="/assets/flag1.gif" style="width:60px"></img>
-								<img src="/assets/flag2.gif" style="width:60px"></img>
-
-							<img src="/assets/flag3.gif" style="width:60px"></img>
+	</div>		
 
 
 			</td>
