--- a/index.html
+++ b/index.html
@@ -93,16 +93,11 @@ I8,      ,8'
 			</td>
 		<td>
 							<img src="construction.gif" style="width:180px"></img>
+		<img src="flag4.gif"></img>
 
 			</td>
 	
-	<td>
-		<div style="background:white">
-							<img src="/assets/flag1.gif" style="width:60px"></img>
-	</div>		
-
-
-			</td>
+	
 		
 		</tr></table>
 </div>
