--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I8,      ,8'
 			</td>
 		<td>
 							<img src="construction.gif" style="width:180px"></img>
-		<img src="flag4.gif"></img>
+		<img src="/assets/flag4.gif"></img>
 
 			</td>
 	
