--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ I8,      ,8'
 
 </pre></td>
 			
-			<td style="width:50%">
+			<td style="width:20%;">
 <span id="dotNet" style="font-size:24px;font-weight:600;color:silver;"> .net</span>
 			</td>
 		<td>
