--- a/stagingg.html
+++ b/stagingg.html
@@ -128,6 +128,9 @@ I8,      ,8'
 						<td>
 					<img src="flag5.gif.gif" style="width:60px;"></img>
 					</td>
+					<td>
+												<img src="construction.gif" style="width:80px"></img>
+					</td>
 					</tr>
 				</table>
 			
