--- a/stagingg.html
+++ b/stagingg.html
@@ -190,8 +190,8 @@ I8,      ,8'
 	</h5>
 	
 	<ul>
-	<li><a target="_BLANK" href="/old/campaign1">campaign website #1</a></li>
-	<li><a target="_BLANK" href="/old/campaign2/">campaign website #2</a></li>
+	<li><a target="_BLANK" href="/old/campaign1">campaign website 1</a> (10/2018)</li>
+	<li><a target="_BLANK" href="/old/campaign2/">campaign website 3</a> (5/2021)</li>
 	<li>
 							<a href="cgol">Conway's Game of Life (2018)</a>
 						</li>
