--- a/stagingg.html
+++ b/stagingg.html
@@ -163,22 +163,22 @@ I8,      ,8'
 	<li>
 						<span class="latestTag">Blog</span>
 						<a href="yost.html" target="_BLANK">Drivers License Typography by State</a>
-						<span class="smoldate">6/22/22</span>
+						<span class="smoldate">6/22/2022</span>
 					</li>
 					<li>
 						<span class="latestTag">Blog</span>
 						<a href="yost.html" target="_BLANK">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
-						<span class="smoldate">3/13/22</span>
+						<span class="smoldate">3/13/2022</span>
 					</li>
 					<!-- <li>
 						<span class="latestTag">Arlingtonian</span>
 						<a href="https://www.arlingtonian.com/archives/25401" target="_BLANK">Beyond the Classics</a>
-						<span class="smoldate">2/17/22</span>
+						<span class="smoldate">2/17/2022</span>
 					</li>
 					<li>
 						<span class="latestTag">Arlingtonian</span>
 						<a href="https://www.arlingtonian.com/archives/25422" target="_BLANK">Marching for Masks</a>
-						<span class="smoldate">2/17/22</span>
+						<span class="smoldate">2/17/2022</span>
 					</li> -->
 				</ul>
 			</div>
@@ -190,14 +190,15 @@ I8,      ,8'
 	</h5>
 	
 	<ul>
-	<li><a target="_BLANK" href="/old/campaign1">campaign website 1</a> (10/2018)</li>
-	<li><a target="_BLANK" href="/old/campaign2/">campaign website 3</a> (5/2021)</li>
+		<li><a target="_BLANK" href="/old/campaign1">campaign website 1</a> <span class="smoldate">10/2018</span></li>
+		<li><a target="_BLANK" href="/old/campaign2/">campaign website 3</a> <span class="smoldate">5/2021</span></li>
 	<li>
-							<a href="cgol">Conway's Game of Life (2018)</a>
+							<a href="cgol">Conway's Game of Life</a> <span class="smoldate">2018</span>
+
 						</li>
 					
 						<li>
-							<a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software (2018)</a>
+							<a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">2018</span>
 							<ul>
 								<li>
 									<a href="https://wireless2.fcc.gov/UlsApp/UlsSearch/license.jsp?licKey=888429">KE8HJU</a>
