--- a/stagingg.html
+++ b/stagingg.html
@@ -216,7 +216,17 @@ I8,      ,8'
 </div>
 	</div>
 	
-	
+	<div class="feed">
+				<h5 class="sectionHeader">
+~misc.~
+	</h5>
+		<ul>
+			
+			
+		</ul>
+				</div>
+				
+				
 	
 			
 			<div id="guestbook">
