--- a/stagingg.html
+++ b/stagingg.html
@@ -219,7 +219,12 @@ I8,      ,8'
 ~misc.~
 	</h5>
 		<ul>
-			
+			<li><a href="#">spotify</a></li>
+			<li><a href="#">ig</a></li>
+			<li><a href="#">letterboxd</a></li>
+			<li><a href="#">student journalism</a></li>
+
+
 			
 		</ul>
 				</div>
