--- a/stagingg.html
+++ b/stagingg.html
@@ -69,8 +69,7 @@ margin-left: auto;
 }
 .sectionHeader {
   transform: rotate(-2deg) scale(1.25,1);
-font-family: Comic Sans MS;
-
+font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 	}
 #feedGuest {
 
@@ -91,7 +90,7 @@ margin-right:15%;
 	<body>
 			<table id="header">
 			<tr>
-			<td colspan="4" style="style:text-align:center;font-family:Comic Sans MS;">
+			<td colspan="4" style="style:text-align:center;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;">
 			welcome to
 			</td>
 			</tr>
@@ -124,7 +123,7 @@ I8,      ,8'
 					</td>
 					<td style="width:50px">
 						<marquee>
-							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;font-family:Comic Sans MS;"> .net</span>
+							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;"> .net</span>
 						</marquee>
 				
 					</td>
