--- a/stagingg.html
+++ b/stagingg.html
@@ -6,7 +6,7 @@
 			/* background:tan; */
 			background-image: url("starssss.gif");
   padding: 0;
-  color:white;
+  color:white !important;
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
     }
 
