--- a/stagingg.html
+++ b/stagingg.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>jamesunderwood.net ???</title>
+		<title>James Underwood ???</title>
 		<style>
 		body {
 			/* background:tan; */
