--- a/stagingg.html
+++ b/stagingg.html
@@ -123,7 +123,7 @@ I8,      ,8'
 					</td>
 					<td style="width:50px">
 						<marquee>
-							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;"> .net</span>
+							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;">.net .net</span>
 						</marquee>
 				
 					</td>
