--- a/stagingg.html
+++ b/stagingg.html
@@ -121,8 +121,8 @@ I8,      ,8'
 
 </pre>
 					</td>
-					<td style="width:50px">
-						<marquee behavior="alternate">
+					<td style="width:75px">
+						<marquee">
 							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;">.net</span>
 						</marquee>
 				
