--- a/stagingg.html
+++ b/stagingg.html
@@ -268,7 +268,7 @@ guestbook
 					</li>
 				</ul>
 			</div>
-			<script src="jquery-3.6.0.min.js"/>
+<script src="jquery-3.6.0.min.js"></script>
 			<script>
 $("#container").html("");
 $.get("https://docs.google.com/spreadsheets/d/14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g/export?format=csv&id=14ZEKnnMLlv9dS8nNlgRI70Ine9_eWFMErjOehHpp2-g", function(data, status) {
