--- a/stagingg.html
+++ b/stagingg.html
@@ -71,7 +71,11 @@ margin-left: auto;
   transform: rotate(-2deg) scale(1.25,1);
 font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 	}
-#feedGuest {
+@font-face {
+  font-family: 'Comic Sans';
+  src: url("/comic-sans-ms/comici.ttf");
+}
+			#feedGuest {
 
 }
 
