--- a/stagingg.html
+++ b/stagingg.html
@@ -69,11 +69,11 @@ margin-left: auto;
 }
 .sectionHeader {
   transform: rotate(-2deg) scale(1.25,1);
-font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
+font-family: "Comic Sans", "Comic Sans MS", "comicc", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 	}
 @font-face {
-  font-family: 'Comic Sans';
-  src: url("/comic-sans-ms/comici.ttf");
+  font-family: 'comicc';
+  src: url("/comic-sans-ms/COMIC.ttf");
 }
 			#feedGuest {
 
@@ -94,7 +94,7 @@ margin-right:15%;
 	<body>
 			<table id="header">
 			<tr>
-			<td colspan="4" style="style:text-align:center;font-family: 'Comic Sans', 'Comic Sans MS', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;">
+			<td colspan="4" style="style:text-align:center;font-family: 'Comic Sans', 'Comic Sans MS', 'comicc', 'Chalkboard', 'ChalkboardSE-Regular', sans-serif;">
 			welcome to
 			</td>
 			</tr>
