--- a/stagingg.html
+++ b/stagingg.html
@@ -5,6 +5,7 @@
 		body {
 			/* background:tan; */
 			background-image: url("starssss.gif");
+			            background-attachment: fixed;
   padding: 0;
   color:white !important;
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
