--- a/stagingg.html
+++ b/stagingg.html
@@ -273,6 +273,19 @@ guestbook
 					</li>
 				</ul>
 			</div>
+
+<div>
+	
+	<table>
+		<tr>
+			<td><a href="https://instagram.com/junderwooood"><img src="/assets/instagram.png"></a></td>
+							<td><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=f4c792a5605a45f0"><img src="/assets/spotify.png"></a></td>
+
+		
+		</tr>
+	</table>
+</div>
+
 <script src="jquery-3.6.0.min.js"></script>
 			<script>
 $("#container").html("");
