--- a/stagingg.html
+++ b/stagingg.html
@@ -93,6 +93,13 @@ margin-right:15%;
 			.cryptedmail:after {
   content: attr(data-name) "@" attr(data-domain) "." attr(data-tld); 
 }
+			
+			.bottomButton {
+			width: 40px;	
+			}
+			.bottomButtonTable {
+			background: white;	
+			}
 		
 	</style>
 	</head>
@@ -280,10 +287,10 @@ guestbook
 
 <div>
 	
-	<table>
+	<table class="bottomButtonTable">
 		<tr>
-			<td><a href="https://instagram.com/junderwooood"><img src="/assets/instagram.png"></a></td>
-							<td><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=f4c792a5605a45f0"><img src="/assets/spotify.png"></a></td>
+			<td><a href="https://instagram.com/junderwooood"><img class="bottomButton" src="/assets/instagram.png"></a></td>
+							<td><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=f4c792a5605a45f0"><img class="buttomButton" src="/assets/spotify.png"></a></td>
 
 		
 		</tr>
