--- a/stagingg.html
+++ b/stagingg.html
@@ -95,10 +95,10 @@ margin-right:15%;
 }
 			
 			.bottomButton {
-			width: 40px;	
+			width: 40px !important;	
+				filter: invert(1);
 			}
 			.bottomButtonTable {
-			background: white;	
 			}
 		
 	</style>
@@ -290,7 +290,7 @@ guestbook
 	<table class="bottomButtonTable">
 		<tr>
 			<td><a href="https://instagram.com/junderwooood"><img class="bottomButton" src="/assets/instagram.png"></a></td>
-							<td><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=f4c792a5605a45f0"><img class="buttomButton" src="/assets/spotify.png"></a></td>
+							<td><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=f4c792a5605a45f0"><img class="bottomButton" src="/assets/spotify.png"></a></td>
 
 		
 		</tr>
