--- a/stagingg.html
+++ b/stagingg.html
@@ -27,6 +27,7 @@ text-align:center;
   background:black;
 margin-left:15%;
 margin-right:15%;
+	  opacity: 0.75;
 }
 .latestTag {
   background:#2b2b2b;
