--- a/stagingg.html
+++ b/stagingg.html
@@ -79,7 +79,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			
 @font-face {
   font-family: 'comicc';
-  src: url("/comic-sans-ms/COMIC.ttf");
+  src: url("/comic-sans-ms/COMIC.TTF");
 }
 			#feedGuest {
 
