--- a/stagingg.html
+++ b/stagingg.html
@@ -24,10 +24,9 @@
 text-align:center;
   padding:10px;
   line-height:1.5em;
-  background:black;
+  background:rgba(0,0,0,0.75);
 margin-left:15%;
 margin-right:15%;
-	  opacity: 0.75;
 }
 .latestTag {
   background:#2b2b2b;
