--- a/stagingg.html
+++ b/stagingg.html
@@ -24,7 +24,7 @@
 text-align:center;
   padding:10px;
   line-height:1.5em;
-  background:rgba(0,0,0,0.75);
+  background:rgba(0,0,0,0.60);
 margin-left:15%;
 margin-right:15%;
 }
@@ -73,7 +73,7 @@ margin-left: auto;
 font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 	}
 	.comicSans {
-				font-family: "Comic Sans", "Comic Sans MS", "comicc", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
+font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 		}
 			
 @font-face {
