--- a/stagingg.html
+++ b/stagingg.html
@@ -10,6 +10,9 @@
   color:white !important;
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
     }
+			body a {
+			color: LightBlue;	
+			}
 
 		
 .post {
