--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ latest
 guestbook
 </h3>
 
-
+<button onclick="window.open('/guestbookpost.html','name','width=600,height=400')">leave a message for the guestbook</button>
  <details>
   <summary>leave a message</summary>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:560px;" marginheight="0" marginwidth="0">Loading…</iframe>
