--- a/stagingg.html
+++ b/stagingg.html
@@ -221,7 +221,7 @@ I8,      ,8'
 		
 			<div class="feed" id="guestbook">
 				<h5 class="sectionHeader">~guestbook~</h5>
-				
+				<button onclick="window.open('/guestbookpost.html','name','width=600,height=400')">leave a message for the guestbook</button>
 				<details>
 					<summary>leave a message</summary>
 					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:560px;" marginheight="0" marginwidth="0">Loading…</iframe>
