--- a/guestbookpost.html
+++ b/guestbookpost.html
@@ -1,1 +1,2 @@
-					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
+<div style="height: 500px; overflow: hidden">			
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;position: relative;top: -100px;" marginheight="0" marginwidth="0">Loading…</iframe>
