--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I8,      ,8'
 			</td>
 		<td>
 							<img src="construction.gif" style="width:160px"></img>
-		<img width="60px" src="/assets/flag4.gif.gif"></img>
+		<!-- <img width="60px" src="/assets/flag4.gif.gif"></img> -->
 
 			</td>
 	
