--- a/guestbookpost.html
+++ b/guestbookpost.html
@@ -1,3 +1,3 @@
-<div style="height: 500px; overflow: hidden">			
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true#i1" frameborder="0" style="width:100%;height:100%;position: relative;top: -205px;" marginheight="0" marginwidth="0">Loading…</iframe>
+<div style="height: 200px; overflow: hidden">			
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true#i1" frameborder="0" style="width:100%;height:100%;position: relative;" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
