--- a/guestbookpost.html
+++ b/guestbookpost.html
@@ -1,6 +1,6 @@
 <body style="background: #673ab7;">
   <h1 style="color:white">jamesunderwood.net guestbook submission</h1>
 <div style="height: 350px;overflow: hidden;clip-path: inset(150px 0px 0px 0 round 0px);">			
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 </body>
