--- a/guestbookpost.html
+++ b/guestbookpost.html
@@ -1,7 +1,7 @@
 <body style="background: #673ab7;text-align:center;font-family:Verdana;">
   <h1 style="color:white">guestbook post</h1>
   <div style="position:relative;top:-185px;">
-<div style="height: 350px;overflow: hidden;clip-path: inset(53% 0px 0px 0 round 0px);">			
+<div style="height: 350px;width:600px;overflow: hidden;clip-path: inset(53% 0px 0px 0 round 0px);">			
 <iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
   </div>
