--- a/guestbookpost.html
+++ b/guestbookpost.html
@@ -1,4 +1,4 @@
-<body style="background: #673ab7;text-align:center;font-family:Verdana;">
+<body style="background: #673ab7;font-family:Verdana;overflow:hidden;">
   <h1 style="color:white">guestbook post</h1>
   <div style="position:relative;top:-185px;">
 <div style="height: 350px;width:600px;overflow: hidden;clip-path: inset(53% 0px 0px 0 round 0px);">			
