--- a/stagingg.html
+++ b/stagingg.html
@@ -240,11 +240,11 @@ I8,      ,8'
 			<li><a href="#">student journalism</a></li>
 		</ul>
 		<h6>contact me</h6>
-		<a href="#" class="cryptedmail"
+		<img src="emailmegif.gif">
+		<p class="cryptedmail"
    data-name="jcunderwood"
    data-domain="pm"
-   data-tld="me"
-   onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a>
+   data-tld="me"></p>
 		
 				</div>
 				
