--- a/stagingg.html
+++ b/stagingg.html
@@ -240,7 +240,7 @@ I8,      ,8'
 			<li><a href="#">student journalism</a></li>
 		</ul>
 		<h6>contact me</h6>
-		<img src="emailmegif.gif">
+		<img src="emailmegif.gif" style="width:80px">
 		<p class="cryptedmail"
    data-name="jcunderwood"
    data-domain="pm"
