--- a/stagingg.html
+++ b/stagingg.html
@@ -239,7 +239,7 @@ I8,      ,8'
 			<li><a href="#">letterboxd</a></li>
 			<li><a href="#">student journalism</a></li>
 		</ul>
-		<h5 class="sectionHeader">contact</h5>
+		<h5 class="sectionHeader">~contact~</h5>
 		<img src="emailmegif.gif" style="width:80px">
 		<p class="cryptedmail"
    data-name="jcunderwood"
