--- a/stagingg.html
+++ b/stagingg.html
@@ -9,6 +9,7 @@
   padding: 0;
   color:white !important;
   font-family: 'Verdana', 'Helvetica', 'Arial', sans-serif;
+			cursor: url(http://www.rw-designer.com/cursor-extern.php?id=130796), auto;
     }
 			body a {
 			color: LightBlue;	
