--- a/stagingg.html
+++ b/stagingg.html
@@ -144,10 +144,10 @@ I8,      ,8'
 					</tr>
 				</table>
 			
-			<div id="subheader">
+			<!--<div id="subheader">
 				<p style="margin:0;">
 					<a>old website</a> | <a target="_BLANK" href="/old/campaign1">campaign website #1</a> | <a target="_BLANK" href="/old/campaign2/">campaign website #2</a> | <a target="_BLANK" href="https://github.com/realjunderwood">github &lt;main&gt;</a> | <a target="_BLANK" href="https://github.com/junderw00d">github &lt;old&gt;</a> | <a target="_BLANK" href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a>
-				</p>
+				</p>-->
 			</div>
 			<div class="feed">
 				<h5 class="sectionHeader">
